apps/basic/kubeclarity.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeclarity-ingress
  namespace: apps-system
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "wss"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    secretName: kubec-host-secret-tls
  rules:
  - host: kubeclarity.home
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: kubeclarity-kubeclarity
              port:
                number: 8080
