apps/basic/weave-gitops.yaml
# access via port 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-ingress
  namespace: apps-system
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "wss"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    secretName: host-secret-tls
  rules:
  - host: weave.home
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: weave-gitops
              port:
                number: 9001
